syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.mailservice.proto;

message MailConfirmationRequest {
    string to = 1;
    string token = 2;
}

message OrganizationInvitationRequest {
    string to = 1;
    string organization = 2;
}

message DepositRequest {
    string to = 1;
    uint64 amount = 2;
}

message DepositInfoRequest {
    string to = 1;
    bool minted = 2;
}

message WithdrawRequest {
    string to = 1;
    uint64 amount = 2;
}

message WithdrawInfoRequest {
    string to = 1;
    bool burned = 2;
}

message Empty {
}

service MailService {
    rpc SendMailConfirmation(MailConfirmationRequest) returns (Empty);
    rpc SendOrganizationInvitation(OrganizationInvitationRequest) returns (Empty);
    rpc SendDepositRequest(DepositRequest) returns (Empty);
    rpc SendWithdrawInfo(WithdrawInfoRequest) returns (Empty);
    rpc SendWithdrawRequest(WithdrawRequest) returns (Empty);
    rpc SendDepositInfo(DepositInfoRequest) returns (Empty);
}
